Reestructuración del orden de las lineas de codigo. Cambios en index (CVV y Tarjeta). Span CSS bien puesto.

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -53,6 +53,10 @@ form input {
     clear: right;
     margin-bottom: 10px;
 }
+#spanArticlePrice{
+    position: absolute;
+    margin-left: 10px;   
+}
 
 /*Ordenar select*/
 .wayToPay {
