--- a/css/estilos.css
+++ b/css/estilos.css
@@ -61,6 +61,7 @@ section>header {
 
 h2 {
     text-align: center;
+    font-family: system-ui, -apple-system;
     font-size: 30px;
     -webkit-text-stroke: 2px black;
     color: #FBB040; 
@@ -124,7 +125,7 @@ form input {
 
 .selectWayToPay {
     display:block;
-    margin-bottom: 70px;
+    margin-bottom: 55px;
     background-color: #f9f9f9b9;
     border-radius: 5px;
     border-color: #FBB040;
