--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,6 @@ ocupe lo que ocupa cada caja*/
     padding: 0;
 }
 
-
 /*Colocación del logo de la tienda en el centro superior de la página a modo de cabecera,
 resaltando con fondo negro*/
 
@@ -24,21 +23,12 @@ header {
     padding-top: 15px;
 }
 
-/* Si quitamos el carrito negro del Header del formulario, quitamos este estilo
-#cartIcon{
-    width: 20px;
-    height: 20px;
-}
-*/
-
 /*Fondo body*/
 
 body {
     background-color: #506F86;
     width: 100%;
-    height: 100%;
 }
-
 
 /*Estilos para la caja completa del formulario, color, degradado y tamaño*/
 section>header {
@@ -53,19 +43,12 @@ section>header {
     padding: 20px 0px 20px 0px;   
 }
 
-/* Lo mismo que antes, si quitamos el icono, quitamos este estilo
-#cartIcon {
-    position: relative;
-}
-*/
-
 h2 {
     text-align: center;
     font-family: system-ui, -apple-system;
     font-size: 30px;
     -webkit-text-stroke: 2px black;
-    color: #FBB040; 
-    
+    color: #FBB040;     
 }
 
 form {
@@ -78,8 +61,7 @@ form {
     width: 750px;
     margin: 0 auto;
     margin-bottom: 74px;
-    padding: 30px 450px 20px 30px;
-    
+    padding: 30px 450px 20px 30px;    
 }
 
 /*Colocación de los componentes internos del formulario*/
@@ -95,8 +77,7 @@ form input {
     border-radius: 5px;
     border-color: #FBB040;
     background-color: #f9f9f9b9;
-    padding: 1px 5px 1px 5px;
-    
+    padding: 1px 5px 1px 5px;   
 }
 
 #spanName{
@@ -187,10 +168,10 @@ form input {
 footer {
     position: relative;
     width: 100%;
-    height: 55px;
+    height: 64px;
     background-color: #2F3C4F;
     text-align: right;
-    padding: 15px 30px 15px 0;
+    padding: 20px 30px 0 0;
     color: white;
 }
 
